@@ -1,3 +1,9 @@
+2008-06-11  Dan Williams  <dcbw@redhat.com>
+
+	* src/nm-device-802-11-wireless.c
+		- (add_new_ap_to_device_list): ignore APs with invalid BSSIDs
+			(debian #461500)
+
 2008-06-04  Dan Williams  <dcbw@redhat.com>
 
 	* src/nm-device-802-11-wireless.c
